// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Email renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      disabled={true}
      placeholder=" "
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      disabled={true}
      placeholder=" "
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ jbDlzq"
    disabled={true}
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        disabled={true}
        placeholder=" "
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo foaEFs"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo fZOEPn"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo bEGoiJ"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz fwlxzw"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      placeholder=" "
      readOnly={true}
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      placeholder=" "
      readOnly={true}
      type="email"
      value="jake.weary@sportsbet.io"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder=" "
        readOnly={true}
        type="email"
        value="jake.weary@sportsbet.io"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-QmDjo dqpabq"
      dir="rtl"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-QmDjo eFgkVp"
      dir="rtl"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo KGXRn"
        dir="rtl"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fduepK gfcqQs"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <input
      className="sc-QmDjo dqpabq"
      placeholder="medium"
      type="email"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <input
      className="sc-QmDjo eFgkVp"
      placeholder="large"
      type="email"
    />
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV bzvfAh"
    >
      <input
        className="sc-QmDjo hboaBK"
        placeholder="xlarge"
        type="email"
      />
      <label
        className="sc-fduepK lgGcoP"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type Email supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      medium
    </label>
    <input
      className="sc-QmDjo eefKuh"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <label
      className="sc-cSizRO bQDzqh"
    >
      large
    </label>
    <input
      className="sc-QmDjo fzqtXe"
      placeholder="e.g. jake.weary@sportsbet.io"
      type="email"
    />
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hdyzPZ gHXBDw"
  >
    <div
      className="sc-joKenV libhLy"
    >
      <input
        className="sc-QmDjo KGXRn"
        placeholder="e.g. jake.weary@sportsbet.io"
        type="email"
      />
      <label
        className="sc-fduepK lgGcoP"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-bkrxz kqqQcA"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
